# proper-perplexity-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  token_pool_config.example.json
.github/workflows/: ci.yml
docs/harness/: codex-perplexity-mcp.md
perplexity/: client.py  config.py  logger.py
perplexity/server/: admin.py  app.py  utils.py
perplexity/server/web/: package-lock.json  package.json
perplexity/server/web/src/components/: AddTokenModal.tsx  App.tsx  ConfirmModal.tsx  MonitorPanel.tsx  StatsGrid.tsx  TokenTable.tsx
perplexity/server/web/src/components/logs/: LogsPanel.tsx
perplexity/server/web/src/components/ui/: Modal.tsx  StatCard.tsx  Toast.tsx  Toggle.tsx
perplexity/server/web/src/hooks/: useLogs.ts  usePool.ts  useToast.ts
perplexity/server/web/src/lib/: api.ts
scripts/: mcp_stdio_smoke.py  smoke-image-upload.ps1
src/: server.py  tools.py
tests/: test_config.py  test_logging.py  test_mcp.py  test_mcp_stdio.py  test_oai.py  test_research_downgrade.py  test_retry_failover.py  test_retry_logic.py
